--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
+    "types": ["cypress", "node"],
     "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
@@ -24,6 +25,13 @@
       "@context/*": ["./src/contexts/*"]
     }
   },
-  "include": ["src", "craco.config.ts"],
-  "exclude": ["src/main/test/cypress", "node_modules"]
+  "include": [
+    "src",
+
+    "types",
+    "../node_modules/@cypress",
+    "./**/*.ts",
+    "cypress",
+    "cypress/component/.cy.tsx"
+  ]
 }
